# mysql_async

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.tpl  appveyor.yml  azure-pipelines.yml  dev.yml  flake.nix  rustfmt.toml
.circleci/: config.yml
src/: buffer_pool.rs  consts.rs  error.rs  errors.rs  lib.rs  macros.rs  metrics.rs  opts.rs  proto.rs  query.rs  scramble.rs  tracing_utils.rs  value.rs
src/conn/: binlog_stream.rs  mod.rs  named_params.rs  stmt_cache.rs
src/conn/binlog_stream/: mod.rs  request.rs
src/conn/futures/: batch_exec.rs  columns.rs  disconnect.rs  drop_result.rs  first.rs  first_exec.rs  handle_local_infile.rs  mod.rs  new_conn.rs  new_raw_query_result.rs  new_text_query_result.rs  ping.rs  prep_exec.rs  prepare.rs  query.rs  read_max_allowed_packet.rs  read_packet.rs  reset.rs  send_long_data.rs  write_packet.rs
src/conn/futures/query_result/: mod.rs
src/conn/futures/query_result/futures/: collect.rs  collect_all.rs  drop_result.rs  for_each.rs  map.rs  mod.rs  reduce.rs
src/conn/pool/: in_pool_connections.rs  metrics.rs  mod.rs  recycler.rs  ttl_check_inerval.rs  waitlist.rs
src/conn/pool/futures/: disconnect_pool.rs  get_conn.rs  mod.rs  start_transaction.rs
src/conn/routines/: change_user.rs  exec.rs  helpers.rs  mod.rs  next_set.rs  ping.rs  prepare.rs  query.rs  query_binary.rs  reset.rs
src/conn/stmt/: mod.rs
src/conn/stmt/futures/: batch.rs  execute.rs  first.rs  mod.rs  stmt_first.rs
src/conn/transaction/: mod.rs
src/conn/transaction/futures/: commit.rs  mod.rs  query_result.rs  rollback.rs  start_transaction.rs
src/connection_like/: mod.rs  read_packet.rs  write_packet.rs  write_packet2.rs
src/error/: mod.rs
src/error/tls/: mod.rs  native_tls_error.rs  rustls_error.rs
src/io/: async_tls.rs  mod.rs  packet_codec.rs  read_packet.rs  socket.rs  write_packet.rs
src/io/futures/: connecting_stream.rs  connecting_tcp_stream.rs  mod.rs  write_packet.rs
src/io/io_futures/: connecting_stream.rs  mod.rs  write_packet.rs
src/io/tls/: mod.rs  native_tls_io.rs  no_tls.rs  rustls_io.rs
src/local_infile_handler/: builtin.rs  mod.rs
src/opts/: mod.rs  native_tls_opts.rs  rustls_opts.rs
src/queryable/: mod.rs  query_result.rs  stmt.rs  transaction.rs
src/queryable/query_result/: for_each.rs  map.rs  mod.rs  reduce.rs  result_set_stream.rs  tests.rs
test/: client.p12
tests/: exports.rs  generic.rs
