[package]
authors = ["blackbeam <aikorsky@gmail.com>"]
description = "Tokio based asynchronous MySql client library."
documentation = "https://docs.rs/mysql_async"
keywords = ["mysql", "database", "asynchronous", "async"]
license = "MIT/Apache-2.0"
name = "mysql_async"
readme = "README.md"
repository = "https://github.com/blackbeam/mysql_async"
version = "0.32.0"
exclude = ["test/*"]
edition = "2018"
categories = ["asynchronous", "database"]

[dependencies]
bytes = "1.4"
crossbeam = "0.8.1"
flate2 = { version = "1.0", default-features = false }
futures-core = "0.3"
futures-util = "0.3"
futures-sink = "0.3"
lazy_static = "1"
lru = "0.10.0"
mio = { version = "0.8.0", features = ["os-poll", "net"] }
mysql_common = { version = "0.30", default-features = false, features = [
    "derive",
] }
once_cell = "1.7.2"
pem = "1.0.1"
percent-encoding = "2.1.0"
pin-project = "1.0.2"
priority-queue = "1"
serde = "1"
serde_json = "1"
socket2 = "0.4.2"
thiserror = "1.0.4"
tokio = { version = "1.0", features = ["io-util", "fs", "net", "time", "rt"] }
tokio-util = { version = "0.7.2", features = ["codec", "io"] }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
], optional = true }
twox-hash = "1"
url = "2.1"

[dependencies.tokio-rustls]
version = "0.23.4"
optional = true

[dependencies.tokio-native-tls]
version = "0.3.0"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.rustls]
version = "0.20.0"
features = ["dangerous_configuration"]
optional = true

[dependencies.rustls-pemfile]
version = "1.0.1"
optional = true

[dependencies.webpki]
version = "0.22.0"
optional = true

[dependencies.webpki-roots]
version = "0.22.1"
optional = true

[dev-dependencies]
tempfile = "3.1.0"
socket2 = { version = "0.4.0", features = ["all"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
rand = "0.8.0"

[features]
default = [
    "flate2/zlib",
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",
    "derive",
    "native-tls-tls",
]
default-rustls = [
    "flate2/zlib",
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",
    "derive",
    "rustls-tls",
]
minimal = ["flate2/zlib"]
native-tls-tls = ["native-tls", "tokio-native-tls"]
rustls-tls = [
    "rustls",
    "tokio-rustls",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
]
tracing = ["dep:tracing"]
derive = ["mysql_common/derive"]
nightly = []

[lib]
name = "mysql_async"
path = "src/lib.rs"

[profile.bench]
debug = true
